Fixed meme editor layout issue for mobile displays

--- a/styles/components/main-editor.css
+++ b/styles/components/main-editor.css
@@ -2,6 +2,7 @@
     grid-column: 2;
     display: grid;
     grid-template-columns: 1fr;
+    place-content: center;
     gap: 50px;
     text-align: center;
     margin-bottom: 50px;
@@ -9,7 +10,8 @@
 
 .main-editor .editor-toolbar-container {
     background-color: var(--clrPrimary1);
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-radius: 20px;
 }
 
